회원가입 API 호출 기능 추가

--- a/app/src/main/res/layout/btn_siginup.xml
+++ b/app/src/main/res/layout/btn_siginup.xml
@@ -37,7 +37,7 @@
     android:text="닉네임"/>
 
     <EditText
-        android:id="@+id/edtNickName"
+        android:id="@+id/edtNickname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="자유입력"
